src/objects/Library_Account__c.object
<CustomObject>
    <description>Library Account to which students and staffs are associated with</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Auto-Generated account number</description>
        <displayFormat>LIB-{000000}</displayFormat>
        <inlineHelpText>Auto-Generated account number</inlineHelpText>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Associated_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Employee record</description>
        <inlineHelpText>Associated Employee record</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee_SM__c</referenceTo>
        <relationshipLabel>Library Accounts</relationshipLabel>
        <relationshipName>Library_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who&apos;s</description>
        <inlineHelpText>Associated Staff record</inlineHelpText>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Library Accounts</relationshipLabel>
        <relationshipName>Library_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Student record</description>
        <inlineHelpText>Associated Student record</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Library Accounts</relationshipLabel>
        <relationshipName>Library_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of Staff/Student/Employee/Other</description>
        <inlineHelpText>Email of Staff/Student/Employee/Other</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the Staff/Employee/Student/Other</description>
        <inlineHelpText>First name of the Staff/Employee/Student/Other</inlineHelpText>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the Staff/Employee/Student/Other</description>
        <inlineHelpText>Last name of the Staff/Employee/Student/Other</inlineHelpText>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile of Staff/Student/Employee/Other</description>
        <inlineHelpText>Mobile of Staff/Student/Employee/Other</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of Staff/Student/Employee/Other</description>
        <inlineHelpText>Phone of Staff/Student/Employee/Other</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Library Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LB-{000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Accounts</pluralLabel>
    <recordTypes>
        <fullName>Employees</fullName>
        <active>true</active>
        <description>Only Employees are intended users</description>
        <label>Employees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <description>Other than [Students/Staffs/Employees] are intended users</description>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffs</fullName>
        <active>true</active>
        <description>Only staffs are intended users</description>
        <label>Staffs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Students</fullName>
        <active>true</active>
        <description>Students are intended users</description>
        <label>Students</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>